
  [ Riku Voipio ]
  * [armhf] Add dove cubox support, thanks to Josua Mayer (Closes: #876774)

  [ Sjoerd Simons ]
  * Enable DRM_DP_AUX_CHARDEV (Closes: #890235)

  [ Ben Hutchings ]
  * Set ABI name to trunk
  * debian/config: Rename [build]signed-modules setting to signed-code
  * debian/lib/python/debian_linux/gencontrol.py: Allow overriding output
    filenames

 -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 23 Mar 2018 21:10:34 +0900

linux (4.16~rc6-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Jeremy Stanley ]
  * [x86] Enable CONFIG_GPD_POCKET_FAN as a module (provides fan control on
    GPD Pocket UMPC systems) (Closes: #893451)

  [ Uwe Kleine-König ]
  * [arm64] enable various drivers as module for teres-i OSHW laptop
    (Closes: #892786)

  [ Helge Deller ]
  * [hppa] Re-enable 32-bit SMP kernel build. Qemu now supports it.

  [ Ben Hutchings ]
  * udeb: Add dependency from nic-modules to zlib-modules (fixes FTBFS on
    some architectures)
  * i40e: Add kconfig dependency to ensure cmpxchg64() is available
    (fixes FTBFS on some architectures)
  * [ia64] Re-add configuration for kernel and udebs:
    - Revert "Remove all support for ia64" (Closes: #886693)
    - Disable IRDA, consistent with other architectures
    - linux-image: Don't suggest fdutils
    - Compile with gcc-7
    - linux-image: Improve flavour descriptions
    - udeb: Combine core-modules/kernel-image and scsi{,-common,-extra}-modules
    - udeb: Add i2c-modules

  [ Vagrant Cascadian ]
  * [armhf] Enable ARCH_MESON and related drivers.
  * [armhf] Add device-tree patches from linux-next to support USB and
    Ethernet on meson8b.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 20 Mar 2018 13:52:03 +0000

linux (4.16~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Uwe Kleine-König ]
  * netfilter: enable NFT_FIB_NETDEV as module

  [ Thadeu Lima de Souza Cascardo ]