@@ -46,6 +46,7 @@ linux (4.16-1~exp1) UNRELEASED; urgency=medium
   * debian/config: Rename [build]signed-modules setting to signed-code
   * debian/lib/python/debian_linux/gencontrol.py: Allow overriding output
     filenames
+  * debian/lib/python/debian_linux/debian.py: Close changelog after parsing
 
  -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 23 Mar 2018 21:10:34 +0900
 
